[package]
name = "cargo-sweep"
description = "A tool for cleaning unused build files created by Cargo"
version = "0.7.1"
edition = "2021"
authors = ["holmgr <viktor.holmgren@gmail.com>"]
keywords = ["tool", "cli", "cargo"]
license = "MIT"
repository = "https://github.com/holmgr/cargo-sweep"
readme = "README.md"
categories = ["development-tools::cargo-plugins", "filesystem"]

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
crossterm = "0.28.1"
walkdir = "2"
anyhow = "1.0.43"
log = "0.4.6"
fern = { version = "0.6.2", features = ["colored"] }
cargo_metadata = "0.18.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
human-size = "0.4.3"

[dev-dependencies]
assert_cmd = "2.0.4"
fs_extra = "1.2.0"
predicates = "3.1.2"
tempfile = "3.3.0"
which = { version = "6.0.2", default-features = false }
pretty_assertions = "1.3"
regex = "1.7.0"
unindent = "0.2.3"
trycmd = "0.15.6"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.20.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu"]
